--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  position: relative;
   font-family: "Roboto", sans-serif;
   display: grid;
   grid-template-columns: 150px 150px 150px 150px;
@@ -15,6 +16,7 @@ body {
 .box {
   position: relative;
   perspective: 500px;
+  margin: 2px;
 }
 
 .content {
@@ -80,4 +82,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 20px;
+}
+
+.input-container {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  /* width: 10vw; */
 }
