--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-
+:root {
+  --wesbos-yellow: #ffc600;
+  --black: #272727;
+}
 * {
   box-sizing: border-box;
 }
 
 body {
+  /*Wesbos template starts here*/
+  background-image: url("./topography.svg"),
+    linear-gradient(110deg, #f93d66, #6d47d9);
+  border: 5px solid var(--wesbos-yellow);
+  background-attachment: fixed;
+  /*Wesbos template ends here*/
   position: relative;
   font-family: "Roboto", sans-serif;
   display: grid;
   grid-template-columns: 150px 150px 150px 150px;
   grid-template-rows: 150px 150px 150px 150px;
   margin: 0;
+  height: 100vh;
 }
 
 .box {
